<resources>
    <string name="app_name">Dicoding Jetpack Pro</string>
    <string name="home">Home</string>
    <string name="tvs">Tv\'s</string>
    <string name="bookmark">Bookmark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="synopsis">Synopsis</string>
    <string name="related_movies">Related Movies</string>
    <string name="related_tv">Related Tv Shows</string>
    <string name="find_movies_tv_series_and_more">Find Movies, Tv Series and more..</string>
</resources>
