<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.detail.DetailFragment">

    <ProgressBar
        android:id="@+id/progress_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns_parent_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scaleType="center"
                android:backgroundTint="#eaeaea"
                app:borderWidth="0dp"
                app:fabSize="mini"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />

            <ImageView
                android:id="@+id/iv_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_detail"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_detail"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bookmark"
                android:layout_marginRight="8dp"
                app:tint="@color/colorAccent" />

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                app:cardCornerRadius="12dp"
                android:layout_marginTop="150dp"
                app:layout_constraintStart_toStartOf="@id/fab_back"
                app:layout_constraintTop_toBottomOf="@id/fab_back">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="12dp"
                android:textSize="28sp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_poster"
                tools:text="Spiderman" />

            <TextView
                android:id="@+id/tv_time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:fontFamily="@font/montserrat_regular"
                app:drawableLeftCompat="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_title_detail"
                tools:text="152 minutes" />

            <TextView
                android:id="@+id/tv_rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/montserrat_regular"
                app:drawableLeftCompat="@drawable/ic_rating"
                app:layout_constraintStart_toEndOf="@id/tv_time_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_title_detail"
                tools:text="8.0" />

            <TextView
                android:id="@+id/tv_popularity_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:fontFamily="@font/montserrat_regular"
                app:drawableLeftCompat="@drawable/ic_popularity"
                app:layout_constraintStart_toEndOf="@id/tv_rating_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_title_detail"
                tools:text="8.0"
                android:paddingLeft="8dp" />

            <View
                android:id="@+id/view_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#bdbdbd"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                app:layout_constraintEnd_toEndOf="@id/iv_bookmark"
                app:layout_constraintTop_toBottomOf="@id/tv_time_detail" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/release_date"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toStartOf="@id/tv_genre"
                app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                app:layout_constraintTop_toBottomOf="@id/view_1" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/genre"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/view_1"
                app:layout_constraintStart_toEndOf="@id/tv_release_date"
                app:layout_constraintTop_toBottomOf="@id/view_1" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:fontFamily="@font/montserrat_regular"
                app:layout_constraintEnd_toEndOf="@id/tv_release_date"
                app:layout_constraintStart_toStartOf="@id/tv_release_date"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date"
                tools:text="09 September 2021" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/tv_genre"
                app:layout_constraintStart_toStartOf="@id/tv_genre"
                app:layout_constraintTop_toBottomOf="@id/tv_genre"
                app:singleSelection="false">

            </com.google.android.material.chip.ChipGroup>

            <View
                android:id="@+id/view_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#bdbdbd"
                app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                app:layout_constraintEnd_toEndOf="@id/iv_bookmark"
                app:layout_constraintTop_toBottomOf="@id/chips_genre" />

            <TextView
                android:id="@+id/tv_synopsis_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="@string/synopsis"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@id/iv_bookmark"
                app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                app:layout_constraintTop_toBottomOf="@id/view_2" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:fontFamily="@font/montserrat_regular"
                app:layout_constraintEnd_toEndOf="@id/tv_synopsis_title"
                app:layout_constraintStart_toStartOf="@id/tv_synopsis_title"
                app:layout_constraintTop_toBottomOf="@id/tv_synopsis_title"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/tv_related_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/related_movies"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@id/iv_bookmark"
                app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_synopsis" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_related_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_related_movie"
                app:layout_constraintStart_toStartOf="@id/tv_related_movie"
                app:layout_constraintTop_toBottomOf="@id/tv_related_movie" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>